@startuml

title __JAVA's Class Diagram__\n

  namespace  {
    namespace ava {
      enum Category {
      }
    }
  }
  

  namespace  {
    namespace ava {
      class Java.Company {
      }
    }
  }
  

  namespace  {
    namespace ava {
      abstract class Java.Credit {
      }
    }
  }
  

  namespace  {
    namespace ava {
      class Java.CreditSystemController {
      }
    }
  }
  

  namespace  {
    namespace ava {
      class Java.DatabaseLoader {
      }
    }
  }
  

  namespace  {
    namespace ava {
      class Java.Episode {
      }
    }
  }
  

  namespace  {
    namespace ava {
      class Java.Group {
      }
    }
  }
  

  namespace  {
    namespace ava {
      class Java.Job {
      }
    }
  }
  

  namespace  {
    namespace ava {
      class Java.Movie {
      }
    }
  }
  

  namespace  {
    namespace ava {
      class Java.Person {
      }
    }
  }
  

  namespace  {
    namespace ava {
      abstract class Java.Production {
      }
    }
  }
  

  namespace  {
    namespace ava {
      enum Role {
      }
    }
  }
  

  namespace  {
    namespace ava {
      class Java.Season {
      }
    }
  }
  

  namespace  {
    namespace ava {
      class Java.Show {
      }
    }
  }
  

  namespace  {
    namespace ava {
      enum UserType {
      }
    }
  }
  

  namespace  {
    namespace ava {
      namespace controllers {
        class Java.controllers.AddCreditController {
        }
      }
    }
  }
  

  namespace  {
    namespace ava {
      namespace controllers {
        class Java.controllers.AddPersonController {
        }
      }
    }
  }
  

  namespace  {
    namespace ava {
      namespace controllers {
        class Java.controllers.CreateSeasonController {
        }
      }
    }
  }
  

  namespace  {
    namespace ava {
      namespace controllers {
        class Java.controllers.CreateShowController {
        }
      }
    }
  }
  

  namespace  {
    namespace ava {
      namespace controllers {
        class Java.controllers.CreditViewController {
        }
      }
    }
  }
  

  namespace  {
    namespace ava {
      namespace controllers {
        class Java.controllers.DashboardController {
        }
      }
    }
  }
  

  namespace  {
    namespace ava {
      namespace controllers {
        class Java.controllers.GUIController {
        }
      }
    }
  }
  

  namespace  {
    namespace ava {
      namespace controllers {
        class Java.controllers.LoginController {
        }
      }
    }
  }
  

  namespace  {
    namespace ava {
      namespace controllers {
        class Java.controllers.MenuController {
        }
      }
    }
  }
  

  namespace  {
    namespace ava {
      namespace controllers {
        class Java.controllers.PersonalProfileController {
        }
      }
    }
  }
  

  namespace  {
    namespace ava {
      namespace controllers {
        class Java.controllers.SearchController {
        }
      }
    }
  }
  

  namespace  {
    namespace ample {
      class sample.GUIController {
      }
    }
  }
  

  Java.Company -up-|> Java.Credit
  Java.CreditSystemController -up-|> javafx.application.Application
  Java.CreditSystemController o-- Java.DatabaseLoader : dataLoader
  Java.Episode -up-|> Java.Production
  Java.Group -up-|> Java.Credit
  Java.Job o-- Java.Role : role
  Java.Movie -up-|> Java.Production
  Java.Person -up-|> Java.Credit
  Java.Production -up-|> Java.Credit
  Java.Season -up-|> Java.Credit
  Java.Show -up-|> Java.Credit
  Java.controllers.AddCreditController .up.|> javafx.fxml.Initializable
  Java.controllers.AddPersonController .up.|> javafx.fxml.Initializable
  Java.controllers.AddPersonController o-- Java.Credit : personToCredit
  Java.controllers.CreateSeasonController .up.|> javafx.fxml.Initializable
  Java.controllers.CreateShowController .up.|> javafx.fxml.Initializable
  Java.controllers.CreditViewController .up.|> javafx.fxml.Initializable
  Java.controllers.DashboardController .up.|> javafx.fxml.Initializable
  Java.controllers.GUIController .up.|> javafx.fxml.Initializable
  Java.controllers.LoginController .up.|> javafx.fxml.Initializable
  Java.controllers.MenuController .up.|> javafx.fxml.Initializable
  Java.controllers.PersonalProfileController .up.|> javafx.fxml.Initializable
  Java.controllers.SearchController .up.|> javafx.fxml.Initializable
  sample.GUIController .up.|> javafx.fxml.Initializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
